# capstan

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml  venues.yaml
src/capstan/: __init__.py  config.py  core.py  metrics.py  normalizer.py  schemas.py  venue_adapters.py
src/capstan/utils/: logging.py  math.py  time.py
tests/fixtures/bitget/: books.jsonl  funding.jsonl  index.jsonl  oi.jsonl
tests/fixtures/bybit/: books.jsonl  funding.jsonl  index.jsonl  oi.jsonl
tests/integration/: test_adapters_contract.py  test_bybit_ro.py  test_cross_venue_parity.py  test_fixtures_smoke.py  test_normalizer_e2e.py  test_venue_adapters.py
tests/unit/: test_ingestion_metrics_smoke.py  test_normalizer_unit.py  test_schemas_contract.py  test_signal_bundles.py  test_signals_halflife.py  test_signals_oi_funding.py  test_signals_orderbook.py
