[project]
name = "capstan"
version = "0.1.0"
description = "Capstan — predictive, market-neutral yield router (HFH + LLCA)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Capstan", email = "dev@capstan.local" }]

dependencies = [
  "pydantic>=2.7",
  "numpy>=1.26",
  "pandas>=2.2",
  "websockets>=12",
  "httpx>=0.27",
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "duckdb>=1.0",
  "prometheus-client>=0.20",
  "rich>=13.7",
  "orjson>=3.10",
  "typing-extensions>=4.12",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5",
  "black>=24.4",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "pytest>=8.2",
  "pytest-cov>=5.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","B","UP"]
ignore = ["E203","E501"]

[tool.pytest.ini_options]
addopts = "-q" 